// Copyright 2025 DigitalKin Inc.
//
// Licensed under the GNU General Public License, Version 3.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.gnu.org/licenses/gpl-3.0.html
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package agentic_mesh_protocol.storage.v1;

import "buf/validate/validate.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

// DataType: Enum to categorize the type of data being stored
enum DataType {
  // UNSPECIFIED: Default unspecified data type
  UNSPECIFIED = 0;
  // OUTPUT: Data generated by the system as output
  OUTPUT = 1;
  // VIEW: Data intended for display/UI purposes
  VIEW = 2;
  // LOGS: Log entries and debugging information
  LOGS = 3;
  // OTHER: Other miscellaneous data types
  OTHER = 4;
}

// StorageRecord: Message to represent stored data
message StorageRecord {
  // data: JSON Object to store
  google.protobuf.Struct data = 1 [(buf.validate.field).required = true];
  // mission_id: Mission ID linked to the data
  string mission_id = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.prefix = "missions:"
  ];
  // collection: Name of a group of records (unique by mission_id)
  string collection = 3 [(buf.validate.field).required = true];
  // record_id: Unique identifier for the record within collection
  string record_id = 4 [(buf.validate.field).required = true];
  // creation_date: Creation date of the data
  google.protobuf.Timestamp creation_date = 5 [(buf.validate.field).required = true];
  // update_date: Update date of the data
  google.protobuf.Timestamp update_date = 6 [(buf.validate.field).required = true];
  // data_type: Type of the data
  DataType data_type = 7 [(buf.validate.field).required = true];
}

// StoreRecordRequest: Request to store record
message StoreRecordRequest {
  // data: Data to store or to retrieve
  google.protobuf.Struct data = 1 [(buf.validate.field).required = true];
  // mission_id: Mission ID linked to the data
  string mission_id = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.prefix = "missions:"
  ];
  // collection: Name of a group of records (unique by mission_id)
  string collection = 3 [(buf.validate.field).required = true];
  // record_id: Unique identifier for the record within collection
  string record_id = 4 [(buf.validate.field).required = true];
  // data_type: Type of the data
  DataType data_type = 5 [(buf.validate.field).required = true];
}

// StoreRecordResponse: Response to stored record
message StoreRecordResponse {
  // success: Success of the operation
  bool success = 1 [(buf.validate.field).required = true];
  // stored_data: Stored data
  StorageRecord stored_data = 2 [(buf.validate.field).required = true];
}

// ReadRecordRequest: Request to read a record
message ReadRecordRequest {
  // mission_id: Mission ID linked to the data
  string mission_id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.prefix = "missions:"
  ];
  // collection: Name of a group of records (unique by mission_id)
  string collection = 2 [(buf.validate.field).required = true];
  // record_id: Unique identifier for the record within collection
  string record_id = 3 [(buf.validate.field).required = true];
}

// ReadRecordResponse: Response after read a record
message ReadRecordResponse {
  // success: Success of the operation
  bool success = 1 [(buf.validate.field).required = true];
  // stored_data: Stored data
  StorageRecord stored_data = 2 [(buf.validate.field).required = true];
}

// UpdateRecordRequest: Request to modify record
message UpdateRecordRequest {
  // data: Data to store or to retrieve
  google.protobuf.Struct data = 1 [(buf.validate.field).required = true];
  // mission_id: Mission ID linked to the data
  string mission_id = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.prefix = "missions:"
  ];
  // collection: Name of a group of records (unique by mission_id)
  string collection = 3 [(buf.validate.field).required = true];
  // record_id: Unique identifier for the record within collection
  string record_id = 4 [(buf.validate.field).required = true];
}

// UpdateRecordResponse: Response to record modification
message UpdateRecordResponse {
  // success: Success of the operation
  bool success = 1 [(buf.validate.field).required = true];
  // stored_data: Stored data
  StorageRecord stored_data = 2 [(buf.validate.field).required = true];
}

// RemoveRecordRequest: Request to remove a record
message RemoveRecordRequest {
  // mission_id: Mission ID linked to the data
  string mission_id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.prefix = "missions:"
  ];
  // collection: Name of a group of records (unique by mission_id)
  string collection = 3 [(buf.validate.field).required = true];
  // record_id: Unique identifier for the record within collection
  string record_id = 4 [(buf.validate.field).required = true];
}

// RemoveRecordResponse: Response to removed record
message RemoveRecordResponse {
  // success: Success of the operation
  bool success = 1 [(buf.validate.field).required = true];
}

// ListRecordsRequest: Request to list all records in a given collection
message ListRecordsRequest {
  // mission_id: Mission ID linked to the data
  string mission_id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.prefix = "missions:"
  ];
  // collection: Name of a group of records (unique by mission_id)
  string collection = 2 [(buf.validate.field).required = true];
}

// ListRecordsResponse: Response to list all records in a given collection
message ListRecordsResponse {
  // records: List of records
  repeated StorageRecord records = 1 [(buf.validate.field).required = true];
}

// RemoveCollectionRequest: Request to remove a collection
message RemoveCollectionRequest {
  // mission_id: Mission ID linked to the data
  string mission_id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.prefix = "missions:"
  ];
  // collection: Name of a group of records (unique by mission_id)
  string collection = 2 [(buf.validate.field).required = true];
}

// RemoveCollectionResponse: Response to removed collection
message RemoveCollectionResponse {
  // success: Success of the operation
  bool success = 1 [(buf.validate.field).required = true];
}
