// Copyright 2025 DigitalKin Inc.
//
// Licensed under the GNU General Public License, Version 3.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//       https://www.gnu.org/licenses/gpl-3.0.html
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package agentic_mesh_protocol.user_profile.v1;

import "agentic_mesh_protocol/user_profile/v1/user_profile_messages.proto";
import "buf/validate/validate.proto";

// ════════════════════════════════════ GetUserProfile ════════════════════════════════════ //
message GetUserProfileRequest {
  // mission_id is the unique identifier for the mission.
  string mission_id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.prefix = "missions:",
    (buf.validate.field).string.min_len = 1
  ];
}

message GetUserProfileResponse {
  // success indicates if the operation was successful.
  bool success = 1 [(buf.validate.field).required = true];

  // user_profile is the retrieved user profile entity.
  UserProfile user_profile = 2 [(buf.validate.field).required = true];
}
